tests/compile_fail/declare_scheduler_reserved_eevdf.stderr
error: declare_scheduler!: `EEVDF` is reserved as a built-in scheduler name; pick a different identifier
 --> tests/compile_fail/declare_scheduler_reserved_eevdf.rs:3:20
  |
3 | declare_scheduler!(EEVDF, {
  |                    ^^^^^
